<resources>
    <string name="app_name">wefal</string>

    <!--조인-->
    <string name="join_title">WeFal.</string>
    <string name="email_label">EMAIL</string>
    <string name="pwd_label">PWD</string>
    <string name="join_pwdCheck_label">PWD CHECK</string>
    <string name="join_checkBox_label">개인정보 수집</string>
    <string name="join_button_label">JOIN</string>
    <string name="join_email_hint">이메일을 입력해주세요</string>
    <string name="join_pwd_hint">비밀번호는 8~20글자입니다</string>
    <string name="join_pwdCheck_hint">비밀번호 확인</string>
    <string name="join_notification_ok">비밀번호가 일치합니다</string>
    <string name="join_notification_fail">비밀번호를 확인해주세요</string>

    <!--조인-->
    <string name="login_pwd_hint">비밀번호를 입력해주세요</string>
    <string name="login_btn">LOGIN</string>

</resources>
